wef: initial commit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,13 @@
 [workspace]
-members = ["crates/story", "crates/ui"]
+members = [
+    "crates/story",
+    "crates/ui",
+    "crates/wef",
+    "crates/wef/tool",
+    "crates/wef/examples/wef-winit-example",
+    "crates/webview",
+    "crates/webview/examples/wef-gpui-example",
+]
 
 default-members = ["crates/story"]
 resolver = "2"
@@ -8,6 +16,7 @@ resolver = "2"
 gpui = { git = "https://github.com/huacnlee/zed.git", branch = "webview" }
 gpui-component = { path = "crates/ui" }
 story = { path = "crates/story" }
+wef = { path = "crates/wef" }
 
 anyhow = "1"
 log = "0.4"
