--- a/crates/wef/tool/Cargo.toml
+++ b/crates/wef/tool/Cargo.toml
@@ -18,3 +18,6 @@ reqwest = { version = "0.12.15", features = ["blocking", "json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 colored = "3.0.0"
 fs_extra = "1.3.0"
+tar = "0.4.44"
+bzip2 = "0.5.2"
+indicatif = "0.17.7"
