--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,13 @@ jobs:
         include:
           - target: aarch64-apple-darwin
             run_on: macos-latest
+            cef_arch: macosarm64
           - target: x86_64-linux-gnu
             run_on: ubuntu-latest
+            cef_arch: linux64
           - target: x86_64-windows-msvc
             run_on: windows-latest
+            cef_arch: windows64
     runs-on: ${{ matrix.run_on }}
     steps:
       - uses: actions/checkout@v4
@@ -54,7 +57,7 @@ jobs:
         run: |
           mkdir -p $HOME/.local/share
           cargo run -p wef-tool download-cef ~/.local/share
-          echo "CEF_ROOT=$HOME/.local/share/cef_binary_136.1.6+g1ac1b14+chromium-136.0.7103.114_linux64" >> $GITHUB_ENV
+          echo "CEF_ROOT=$HOME/.local/share/cef_binary_136.1.6+g1ac1b14+chromium-136.0.7103.114_${{ matrix.cef_arch }}" >> $GITHUB_ENV
       - name: Typo check
         if: ${{ matrix.run_on == 'macos-latest' }}
         run: |
