--- a/crates/wef/Cargo.toml
+++ b/crates/wef/Cargo.toml
@@ -10,6 +10,7 @@ description = "Wef is a Rust library for embedding WebView functionality using C
 
 [build-dependencies]
 cc = { version = "1.2.18", features = ["parallel"] }
+pkg-config = "0.3.32"
 
 [dependencies]
 image = { version = "0.25.6", default-features = false }
