--- a/crates/wef/tool/Cargo.toml
+++ b/crates/wef/tool/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wef-tool"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2024"
 authors = ["sunli <scott_s829@163.com>"]
 license = "Apache-2.0"
@@ -21,3 +21,4 @@ fs_extra = "1.3.0"
 tar = "0.4.44"
 bzip2 = "0.5.2"
 indicatif = "0.17.7"
+dirs = "6.0.0"
