--- a/crates/wef/tool/Cargo.toml
+++ b/crates/wef/tool/Cargo.toml
@@ -7,6 +7,7 @@ license = "Apache-2.0"
 homepage = "https://github.com/longbridge/gpui-component"
 repository = "https://github.com/longbridge/gpui-component"
 description = "wef tool is a command line tool for wef"
+readme = "../README.md"
 
 [dependencies]
 clap = { version = "4.5.38", features = ["derive", "env"] }
