--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "crates/ui",
     "crates/wef",
     "crates/wef/tool",
-    "crates/wef/examples/wef-winit-example",
+    "crates/wef/examples/wef-winit",
     "crates/webview",
     "crates/webview/examples/wef-example",
 ]
@@ -53,3 +53,11 @@ resvg = { opt-level = 3 }
 rustybuzz = { opt-level = 3 }
 taffy = { opt-level = 3 }
 ttf-parser = { opt-level = 3 }
+
+[package.metadata.bundle.wef-winit]
+name = "wef-winit"
+identifier = "longbridge.wef-winit"
+
+[package.metadata.bundle.wef-example]
+name = "wef-example"
+identifier = "longbridge.wef-example"
