--- a/crates/wef/examples/wef-winit/Cargo.toml
+++ b/crates/wef/examples/wef-winit/Cargo.toml
@@ -3,6 +3,9 @@ name = "wef-winit"
 version = "0.1.0"
 edition = "2024"
 
+[build-dependencies]
+embed-manifest = "1.4.0"
+
 [dependencies]
 wef.workspace = true
 
