--- a/crates/webview/Cargo.toml
+++ b/crates/webview/Cargo.toml
@@ -17,3 +17,4 @@ image = { version = "0.25.6", default-features = false }
 serde = { version = "1.0.219", features = ["derive"] }
 schemars = "0.8.22"
 raw-window-handle = "0.6.2"
+rust-i18n = "3.1.5"
