wef: Fixed some issues

--- a/crates/webview/examples/wef-example/Cargo.toml
+++ b/crates/webview/examples/wef-example/Cargo.toml
@@ -11,3 +11,5 @@ gpui-webview = { path = "../../" }
 gpui.workspace = true
 gpui-component.workspace = true
 serde = { version = "1.0.219", features = ["derive"] }
+futures-util = "0.3.31"
+flume = "0.11.1"
