--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -51,6 +51,7 @@ tree-sitter-languages = [
 gpui.workspace = true
 sum_tree.workspace = true
 gpui_macros.workspace = true
+rope.workspace = true
 gpui-component-macros.workspace = true
 rust-i18n.workspace = true
 schemars.workspace = true
@@ -70,7 +71,6 @@ paste = "1"
 regex = "1"
 unicode-segmentation = "1.12.0"
 uuid = "1.10"
-ropey = "1.6.1"
 
 # WebView
 wry = { version = "0.48.0", optional = true }
