--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -90,6 +90,7 @@ markup5ever_rcdom = "0.3.0"
 chrono = "0.4.38"
 
 # Code Editor
+lsp-types = "0.97.0"
 tree-sitter = "0.25.4"
 tree-sitter-json = "0.24.8"
 tree-sitter-bash = { version = "0.23.3", optional = true }
