editor: Add completion, code_action provider. (#1242)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ raw-window-handle = "0.6.2"
 smol = "1"
 tracing = "0.1.41"
 notify = "7.0.0"
+lsp-types = "0.97.0"
 
 [workspace.dependencies.windows]
 features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices"]
