--- a/crates/story/Cargo.toml
+++ b/crates/story/Cargo.toml
@@ -15,6 +15,7 @@ rand = "0.8"
 raw-window-handle = { version = "0.6", features = ["std"] }
 regex = "1"
 reqwest_client.workspace = true
+smol.workspace = true
 rust-embed = "8.5.0"
 serde = "1"
 serde_json = "1"
@@ -23,6 +24,7 @@ tracing.workspace = true
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tree-sitter-navi = "0.2.2"
 itertools = "0.14.0"
+lsp-types.workspace = true
 autocorrect = "2.14.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
