editor: Improve search to select first match in visible range. (#1258)

--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -48,7 +48,7 @@ tree-sitter-languages = [
 ]
 
 [dependencies]
-gpui.workspace = true
+gpui = { workspace = true, "features" = ["test-support"] }
 sum_tree.workspace = true
 gpui_macros.workspace = true
 rope.workspace = true
