editor: Add DefinitionProvider. (#1261)
https://github.com/user-attachments/assets/f8234a3f-3075-48ce-ae46-8ea869b6a13d

- Hold `cmd` to hover on a word to trigger definition check.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ single_range_in_vec_init = "allow"
 style = { level = "allow", priority = -1 }
 todo = "deny"
 type_complexity = "allow"
+manual_is_multiple_of = "allow"
 
 [profile.dev]
 codegen-units = 16
