chore: Remove gpui `test-support` feature

--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "gpui-component"
 description = "UI components for building fantastic desktop application by using GPUI."
-version = "0.1.0"
 edition = "2021"
 homepage = "https://github.com/longbridge/gpui-component"
 keywords = ["GPUI", "application", "desktop", "ui"]
 license-file = "LICENSE-APACHE"
+name = "gpui-component"
 publish = true
+version = "0.1.0"
 
 [lib]
 doctest = false
@@ -44,25 +44,25 @@ tree-sitter-languages = [
     "dep:tree-sitter-toml-ng",
     "dep:tree-sitter-typescript",
     "dep:tree-sitter-yaml",
-    "dep:tree-sitter-zig"
+    "dep:tree-sitter-zig",
 ]
 
 [dependencies]
-gpui = { workspace = true, "features" = ["test-support"] }
-sum_tree.workspace = true
-gpui_macros.workspace = true
-rope.workspace = true
+anyhow.workspace = true
+gpui = { workspace = true }
 gpui-component-macros.workspace = true
+gpui_macros.workspace = true
+notify.workspace = true
+rope.workspace = true
 rust-i18n.workspace = true
 schemars.workspace = true
 serde.workspace = true
-serde_repr.workspace = true
 serde_json.workspace = true
+serde_repr.workspace = true
 smallvec.workspace = true
 smol.workspace = true
+sum_tree.workspace = true
 tracing.workspace = true
-anyhow.workspace = true
-notify.workspace = true
 
 enum-iterator = "2.1.0"
 itertools = "0.13.0"
@@ -90,10 +90,9 @@ markup5ever_rcdom = "0.3.0"
 chrono = "0.4.38"
 
 # Code Editor
-lsp-types.workspace = true
 aho-corasick = "1.1.3"
+lsp-types.workspace = true
 tree-sitter = "0.25.4"
-tree-sitter-json = "0.24.8"
 tree-sitter-bash = { version = "0.23.3", optional = true }
 tree-sitter-c = { version = "0.24.1", optional = true }
 tree-sitter-c-sharp = { version = "0.23.1", optional = true }
@@ -109,6 +108,7 @@ tree-sitter-html = { version = "0.23.2", optional = true }
 tree-sitter-java = { version = "0.23.5", optional = true }
 tree-sitter-javascript = { version = "0.23.1", optional = true }
 tree-sitter-jsdoc = { version = "0.23.2", optional = true }
+tree-sitter-json = "0.24.8"
 tree-sitter-make = { version = "1.1.1", optional = true }
 tree-sitter-md = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", tag = "v0.5.0", optional = true }
 tree-sitter-proto = { version = "0.2.0", optional = true }
