editor: Revert to use ropey. (#1284)
For the License reason.

- The performance is slow down, before version can handle 200K lines,
now 150K lines is good.

--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -53,7 +53,7 @@ gpui = { workspace = true }
 gpui-component-macros.workspace = true
 gpui_macros.workspace = true
 notify.workspace = true
-rope.workspace = true
+ropey.workspace = true
 rust-i18n.workspace = true
 schemars.workspace = true
 serde.workspace = true
