--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,13 @@ resolver = "2"
 [workspace.dependencies]
 gpui = { git = "https://github.com/zed-industries/zed.git" }
 gpui_macros = { git = "https://github.com/zed-industries/zed.git" }
-rope = { git = "https://github.com/zed-industries/zed.git" }
 reqwest_client = { git = "https://github.com/zed-industries/zed.git" }
 sum_tree = { git = "https://github.com/zed-industries/zed.git" }
 gpui-component = { path = "crates/ui" }
 gpui-component-macros = { path = "crates/macros" }
 story = { path = "crates/story" }
 wef = { path = "crates/wef" }
+ropey = { version = "=2.0.0-beta.1", features = ["metric_utf16"] }
 
 anyhow = "1"
 log = "0.4"
