--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,3 +76,4 @@ jobs:
         if: ${{ matrix.run_on == 'macos-latest' }}
         run: |
           cargo test --all
+          cargo test -p gpui-component --doc
