editor: Add document_colors LSP. (#1329)

--- a/crates/story/Cargo.toml
+++ b/crates/story/Cargo.toml
@@ -26,6 +26,7 @@ tree-sitter-navi = "0.2.2"
 itertools = "0.14.0"
 lsp-types.workspace = true
 autocorrect = "2.14.2"
+color-lsp = "0.2.0"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 gtk = { version = "0.18" }
