chore: Bump crate version. (#1340)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ resolver = "2"
 
 [workspace.dependencies]
 gpui-component = { path = "crates/ui" }
-gpui-component-macros = { path = "crates/macros" }
+gpui-component-macros = { path = "crates/macros", version = "0.2.0-test2" }
 story = { path = "crates/story" }
 
-gpui = { git = "https://github.com/zed-industries/zed.git" }
-gpui-macros = { git = "https://github.com/zed-industries/zed.git" }
-reqwest_client = { git = "https://github.com/zed-industries/zed.git" }
-zed-sum-tree = { git = "https://github.com/zed-industries/zed.git" }
+gpui = "0.2.0"
+gpui-macros = "0.2.0"
+sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
+http-client = { version = "0.2.0", package = "zed-http-client" }
+reqwest = { version = "0.12.15-zed", package = "zed-reqwest" }
 
 anyhow = "1"
 log = "0.4"
