--- a/crates/macros/Cargo.toml
+++ b/crates/macros/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 edition = "2021"
 name = "gpui-component-macros"
-version = "0.1.0"
+description = "Macros for GPUI Component."
+version = "0.2.0-test2"
+publish = true
+license-file = "LICENSE-APACHE"
 
 [lib]
 proc-macro = true
