--- a/crates/ui/Cargo.toml
+++ b/crates/ui/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
+name = "gpui-component"
 description = "UI components for building fantastic desktop application by using GPUI."
 edition = "2021"
 homepage = "https://github.com/longbridge/gpui-component"
-keywords = ["GPUI", "application", "desktop", "ui"]
-license-file = "LICENSE-APACHE"
-name = "gpui-component"
+keywords = ["gpui", "uikit", "shadcn", "desktop", "ui"]
 publish = true
-version = "0.1.0"
+version = "0.2.0-test2"
+readme = "../../README.md"
+license-file = "LICENSE-APACHE"
 
 [lib]
 doctest = false
@@ -50,7 +51,7 @@ tree-sitter-languages = [
 [dependencies]
 anyhow.workspace = true
 gpui = { workspace = true }
-gpui-component-macros.workspace = true
+gpui-component-macros = { workspace = true }
 gpui-macros.workspace = true
 notify.workspace = true
 ropey.workspace = true
@@ -62,7 +63,7 @@ serde_repr.workspace = true
 smallvec.workspace = true
 smol.workspace = true
 tracing.workspace = true
-zed-sum-tree.workspace = true
+sum-tree.workspace = true
 
 enum-iterator = "2.1.0"
 itertools = "0.13.0"
@@ -73,7 +74,7 @@ unicode-segmentation = "1.12.0"
 uuid = "1.10"
 
 # WebView
-wry = { git = "https://github.com/longbridge/wry", optional = true }
+wry = { version = "0.53.3", package = "lb-wry", optional = true }
 
 # Chart
 num-traits = "0.2"
@@ -110,7 +111,7 @@ tree-sitter-javascript = { version = "0.23.1", optional = true }
 tree-sitter-jsdoc = { version = "0.23.2", optional = true }
 tree-sitter-json = "0.24.8"
 tree-sitter-make = { version = "1.1.1", optional = true }
-tree-sitter-md = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", tag = "v0.5.0", optional = true }
+tree-sitter-md = {  version = "0.5.1", optional = true }
 tree-sitter-proto = { version = "0.2.0", optional = true }
 tree-sitter-python = { version = "0.23.6", optional = true }
 tree-sitter-ruby = { version = "0.23.1", optional = true }
