--- a/crates/story/Cargo.toml
+++ b/crates/story/Cargo.toml
@@ -2,7 +2,7 @@
 name = "story"
 edition = "2024"
 publish = false
-version = "0.2.0-test2"
+version = "0.2.0"
 
 [dependencies]
 anyhow.workspace = true
