--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ resolver = "2"
 
 [workspace.dependencies]
 gpui-component = { path = "crates/ui" }
-gpui-component-macros = { path = "crates/macros", version = "0.2.0-test2" }
+gpui-component-macros = { path = "crates/macros", version = "0.2.0" }
 story = { path = "crates/story" }
 
 gpui = "0.2.0"
