--- a/crates/reqwest_client/Cargo.toml
+++ b/crates/reqwest_client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "reqwest_client"
-version = "0.2.0-test2"
+version = "0.2.0"
 publish = false
 license = "Apache-2.0"
 edition = "2024"
